Import only the logical newsletter channels, strip _Test and _Live from ID

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -14,3 +14,8 @@ services:
               command: 'universal-messenger:newsletter-channels:import'
               description: 'Imports all active Universal Messenger newsletter channels'
               schedulable: true
+
+    Netresearch\NrcUniversalMessenger\EventListener\ModifyPageLayoutContentEventListener:
+        tags:
+            - name: event.listener
+              event: TYPO3\CMS\Backend\Controller\Event\ModifyPageLayoutContentEvent
