--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "netresearch/nrc-universal-messenger",
     "type": "typo3-cms-extension",
     "description": "TYPO3 extension providing a backend module to send newsletters using Universal Messenger API",
+    "license": "GPL-3.0-or-later",
     "authors": [
         {
             "name": "Rico Sonntag",
@@ -16,8 +17,6 @@
             "url": "git@github.com:netresearch/sdk-api-universal-messenger.git"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require": {
         "ext-fileinfo": "*",
         "ext-libxml": "*",
@@ -26,16 +25,16 @@
         "typo3/cms-extbase": "^12.4",
         "typo3/cms-fluid": "^12.4",
         "nyholm/psr7": "^1.8",
-        "pelago/emogrifier": "^7.2.0",
-        "netresearch/sdk-api-universal-messenger": "*"
+        "pelago/emogrifier": "^7.2",
+        "netresearch/sdk-api-universal-messenger": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.50",
         "friendsoftypo3/phpstan-typo3": "^0.9",
         "overtrue/phplint": "^9.3",
-        "phpstan/phpstan": "^1.11",
-        "phpstan/phpstan-strict-rules": "^1.6",
-        "phpstan/phpstan-deprecation-rules": "^1.2",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-strict-rules": "^1.5",
+        "phpstan/phpstan-deprecation-rules": "^1.1",
         "ssch/typo3-rector": "^2.6"
     },
     "config": {
