--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -4,24 +4,21 @@ services:
         autoconfigure: true
         public: false
 
-    Netresearch\NrcUniversalMessenger\:
+    Netresearch\UniversalMessenger\:
         resource: '../Classes/*'
         exclude: '../Classes/Domain/Model/*'
 
-    Netresearch\NrcUniversalMessenger\Command\ImportCommand:
+    Netresearch\UniversalMessenger\Command\ImportCommand:
         tags:
             - name: 'console.command'
               command: 'universal-messenger:newsletter-channels:import'
               description: 'Imports all active Universal Messenger newsletter channels'
               schedulable: true
 
-    Netresearch\NrcUniversalMessenger\EventListener\ModifyPageLayoutContentEventListener:
+    Netresearch\UniversalMessenger\EventListener\ModifyPageLayoutContentEventListener:
         tags:
             - name: event.listener
               event: TYPO3\CMS\Backend\Controller\Event\ModifyPageLayoutContentEvent
 
-    Netresearch\NrcUniversalMessenger\Controller\UniversalMessengerController:
-        tags: [ 'backend.controller' ]
-
-    Netresearch\NrcUniversalMessenger\Controller\NewsletterPreviewController:
+    Netresearch\UniversalMessenger\Controller\UniversalMessengerController:
         tags: [ 'backend.controller' ]
