--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                typo3: [ '^12', '^13' ]
+                typo3: [ '^12' ]
                 php: [ '8.1', '8.2', '8.3' ]
-                exclude:
-                    - typo3: '^13'
-                      php: '8.1'
 
         steps:
             -   id: checkout
