--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
                 uses: shivammathur/setup-php@v2
                 with:
                     php-version: ${{ matrix.php }}
-                    tools: composer:v2, php-cs-fixer
+                    tools: composer:v2
 
             -   name: Validate composer.json and composer.lock
                 run: composer validate
@@ -67,7 +67,7 @@ jobs:
                 name: CGL
                 if: ${{ always() && steps.install.conclusion == 'success' }}
                 run: |
-                    php-cs-fixer fix --dry-run --verbose --config Build/.php-cs-fixer.dist.php
+                    composer ci:cgl -- --dry-run --config Build/.php-cs-fixer.dist.php
 
             -   id: phpstan
                 name: PHPStan
