--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "ext-libxml": "*",
         "typo3/cms-core": "^12.4",
         "typo3/cms-backend": "^12.4",
+        "typo3/cms-frontend": "^12.4",
         "typo3/cms-extbase": "^12.4",
         "typo3/cms-fluid": "^12.4",
         "typo3/cms-lowlevel": "^12.4",
