--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
             "web-dir": ".build/public"
         },
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-main": "1.0.x-dev"
         }
     },
     "autoload": {
