--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.60",
-        "friendsoftypo3/phpstan-typo3": "^0.9",
-        "overtrue/phplint": "^9.4",
-        "phpstan/phpstan": "^1.12",
-        "phpstan/phpstan-strict-rules": "^1.6",
-        "phpstan/phpstan-deprecation-rules": "^1.2",
-        "ssch/typo3-rector": "^2.6"
+        "saschaegerer/phpstan-typo3": "^1.10",
+        "overtrue/phplint": "^9.0",
+        "phpstan/phpstan": "^1.0 || ^2.0",
+        "phpstan/phpstan-deprecation-rules": "^1.0 || ^2.0",
+        "phpstan/phpstan-strict-rules": "^1.0 || ^2.0",
+        "ssch/typo3-rector": "^2.0 || ^3.0"
     },
     "config": {
         "bin-dir": ".build/bin",
@@ -61,6 +61,15 @@
         }
     },
     "scripts": {
+        "ci:cgl": [
+            "php-cs-fixer fix --config Build/.php-cs-fixer.dist.php --diff --verbose --cache-file .build/.php-cs-fixer.cache"
+        ],
+        "ci:rector": [
+            "rector process --config Build/rector.php"
+        ],
+        "ci:test:php:cgl": [
+            "@ci:cgl --dry-run"
+        ],
         "ci:test:php:lint": [
             "phplint --configuration Build/.phplint.yml"
         ],
@@ -68,18 +77,16 @@
             "phpstan analyze --configuration Build/phpstan.neon --memory-limit=-1"
         ],
         "ci:test:php:phpstan:baseline": [
-            "phpstan analyze --configuration Build/phpstan.neon --generate-baseline Build/phpstan-baseline.neon --allow-empty-baseline"
+            "phpstan analyze --configuration Build/phpstan.neon --memory-limit=-1 --generate-baseline Build/phpstan-baseline.neon --allow-empty-baseline"
         ],
         "ci:test:php:rector": [
-            "rector process --config Build/rector.php --dry-run"
+            "@ci:rector --dry-run"
         ],
         "ci:test": [
             "@ci:test:php:lint",
             "@ci:test:php:phpstan",
-            "@ci:test:php:rector"
-        ],
-        "ci:cgl": [
-            "php-cs-fixer fix --config Build/.php-cs-fixer.dist.php --diff --verbose --cache-file .build/.php-cs-fixer.cache"
+            "@ci:test:php:rector",
+            "@ci:test:php:cgl"
         ]
     }
 }
