--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
         "typo3/cms-lowlevel": "^13.4",
         "nyholm/psr7": "^1.8",
         "pelago/emogrifier": "^7.2",
-        "netresearch/sdk-api-universal-messenger": "^1.0"
+        "netresearch/sdk-api-universal-messenger": "^1.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.65",
-        "saschaegerer/phpstan-typo3": "v2.x-dev",
+        "saschaegerer/phpstan-typo3": "^2.0",
         "overtrue/phplint": "^9.5",
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-strict-rules": "^2.0",
