ci: add ext_emconf.php version validation on tag push
Fail-fast validation that ext_emconf.php version matches the tag
before TER publish. Prevents tailor rejecting mismatched versions.

--- a/.github/workflows/publish-to-ter.yml
+++ b/.github/workflows/publish-to-ter.yml
@@ -33,6 +33,21 @@ jobs:
         id: get-version
         run: echo "version=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
+      - name: Validate ext_emconf.php version
+        env:
+          TAG_VERSION: ${{ env.version }}
+        run: |
+          EMCONF_VERSION=$(sed -nE "s/.*'version'[[:space:]]*=>[[:space:]]*'([^']+)'.*/\1/p" ext_emconf.php)
+          if [[ -z "${EMCONF_VERSION}" ]]; then
+            echo "::error file=ext_emconf.php::Could not extract version from ext_emconf.php"
+            exit 1
+          fi
+          if [[ "${TAG_VERSION}" != "${EMCONF_VERSION}" ]]; then
+            echo "::error file=ext_emconf.php::Tag version (${TAG_VERSION}) does not match ext_emconf.php version (${EMCONF_VERSION}). Update ext_emconf.php before tagging."
+            exit 1
+          fi
+          echo "Version validated: ${TAG_VERSION} matches ext_emconf.php"
+
       - name: Get comment
         id: get-comment
         run: |
