chore: add audit exemption for firebase/php-jwt advisory

--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,11 @@
             "typo3/cms-composer-installers": true,
             "typo3/class-alias-loader": true,
             "php-http/discovery": true
+        },
+        "audit": {
+            "ignore": {
+                "PKSA-y2cr-5h3j-g3ys": "Upstream firebase/php-jwt issue via typo3/cms-core, no fix available yet"
+            }
         }
     },
     "extra": {
