chore: migrate to centralized reusable CI workflows
Replace local workflow definitions with calls to
netresearch/typo3-ci-workflows reusable workflows.

Signed-off-by: Sebastian Mendel <info@sebastianmendel.de>

--- a/.github/workflows/auto-merge-deps.yml
+++ b/.github/workflows/auto-merge-deps.yml
@@ -1,46 +1,11 @@
 name: Auto-merge dependency PRs
-
 on:
   pull_request_target:
     types: [opened, synchronize, reopened]
-
-permissions:
-  contents: read
-
+permissions: {}
 jobs:
   auto-merge:
-    name: Auto-merge dependency PRs
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' || github.event.pull_request.user.login == 'renovate[bot]'
-
+    uses: netresearch/typo3-ci-workflows/.github/workflows/auto-merge-deps.yml@main
     permissions:
       contents: write
       pull-requests: write
-
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@a90bcbc6539c36a85cdfeb73f7e2f433735f215b # v2.15.0
-        with:
-          egress-policy: audit
-
-      - name: Approve PR
-        env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh pr review --approve "$PR_URL"
-
-      - name: Enable auto-merge
-        env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Detect allowed merge strategy
-          # Prefer squash (works with signed commit requirements, clean for single-commit PRs)
-          # then merge (also works with signed commits), then rebase (cannot be auto-signed)
-          STRATEGY=$(gh api "repos/${{ github.repository }}" --jq '
-            if .allow_squash_merge then "--squash"
-            elif .allow_merge_commit then "--merge"
-            elif .allow_rebase_merge then "--rebase"
-            else "--squash" end')
-          echo "Using merge strategy: $STRATEGY"
-          gh pr merge --auto $STRATEGY "$PR_URL"
