--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -1,28 +1,10 @@
 name: Dependency Review
-
 on:
   pull_request:
-
 permissions: {}
-
 jobs:
-  dependency-review:
-    name: Dependency Review
-    runs-on: ubuntu-latest
+  review:
+    uses: netresearch/typo3-ci-workflows/.github/workflows/dependency-review.yml@main
     permissions:
       contents: read
       pull-requests: write
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@a90bcbc6539c36a85cdfeb73f7e2f433735f215b # v2.15.0
-        with:
-          egress-policy: audit
-
-      - name: Checkout
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-
-      - name: Dependency Review
-        uses: actions/dependency-review-action@05fe4576374b728f0c523d6a13d64c25081e0803 # v4.8.3
-        with:
-          fail-on-severity: high
-          comment-summary-in-pr: always
